--- a/css/style.css
+++ b/css/style.css
@@ -243,8 +243,7 @@ input[type="submit"] {
 .status_displayed {
 	display: none;
     z-index: 5;
-    top: 50vh;
-    left: 0;
+   	top:calc(100vh - 150px);
 	align-items: center;
 	justify-content: center;
     height: 80px;
@@ -254,4 +253,14 @@ input[type="submit"] {
     font-size: 1.8em;
     border: none;
     opacity: 0.8;
+}
+.status
+{
+	color: white;
+	margin: 10px 5px;
+}
+.signup-field
+{
+	display: none;
+	
 }
